[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt_scrapper"
version = "0.0.6"
authors = [
  { name="Muhammad Jawad", email="muhammadjawad5311@gmail.com" },
]
description = "Scrape YouTube channel and videos data using YouTube Data Api"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "python-dotenv",
    "google-api-python-client",
    "google-auth-oauthlib"
]

[project.urls]
"Homepage" = "https://github.com/jawad5311/YouTube_Scrapper"
"Bug Tracker" = "https://github.com/jawad5311/YouTube_Scrapper/issues"
